--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -466,16 +466,17 @@ input, select, textarea {
 
 	input[type="checkbox"],
 	input[type="radio"] {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
+		-moz-appearance: radio;
+		-webkit-appearance: radio;
+		-ms-appearance: radio;
+		appearance: radio;
 		display: block;
 		float: left;
-		margin-right: -2rem;
-		opacity: 0;
+		padding-left :-2rem;
+		 /* margin-right: -2rem; */
+		/* opacity: 1;
 		width: 1rem;
-		z-index: -1;
+		z-index: 0; */
 	}
 
 		input[type="checkbox"] + label,
@@ -490,7 +491,7 @@ input, select, textarea {
 			display: inline-block;
 			font-size: 0.8rem;
 			font-weight: 300;
-			margin: 0 0 0.5rem 0;
+			margin: 0 0 0rem 0;
 			padding-left: 2.65rem;
 			padding-right: 0.75rem;
 			position: relative;
@@ -508,10 +509,10 @@ input, select, textarea {
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				-moz-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+				/* -moz-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 				-webkit-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-				-ms-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-				transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+				-ms-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out; */
+				/* transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 				border-radius: 4px;
 				border: solid 1px #ffffff;
 				content: '';
@@ -522,15 +523,15 @@ input, select, textarea {
 				position: absolute;
 				text-align: center;
 				top: -0.125rem;
-				width: 1.65rem;
+				width: 1.65rem; */W
 			}
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #ffffff !important;
+			/* background: #ffffff !important;
 			border-color: #ffffff !important;
 			color: #1b1f22;
-			content: '\f00c';
+			content: '\f00c'; */
 		}
 
 		input[type="checkbox"]:focus + label:before,
@@ -1636,3 +1637,12 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		.error {
+			background: red;
+			color: #fff;
+		  }
+
+		  .col-sm-6{
+			padding:10px
+		  }
